pyparser/src/ast/scoping/snapshots/encore_pyparser__ast__scoping__tests__class_method_cannot_see_class_vars.snap
---
source: pyparser/src/ast/scoping/tests.rs
expression: output
---
=== Scope Analysis ===


Scope 0 (Module):
  Foo (local)
