pyparser/src/ast/scoping/snapshots/encore_pyparser__ast__scoping__tests__class_scoping.snap
---
source: pyparser/src/ast/scoping/tests.rs
expression: output
---
# Source: class_scoping.py

```python
# Class scoping: class body doesn't act as enclosing scope for methods

outer = "global"

class MyClass:
    # Class variable
    class_var = "class level"
    count = 0

    def __init__(self, value):
        # Instance variable (not tracked as scope binding)
        self.value = value
        # Local to __init__
        local_init = "init local"

    def method(self):
        # Cannot access class_var directly (class scope not enclosing)
        # Must use self.class_var or MyClass.class_var
        method_local = "method local"
        # Can access global
        return outer

    @staticmethod
    def static_method():
        static_local = "static local"
        return static_local

    @classmethod
    def class_method(cls):
        cls_local = "classmethod local"
        return cls_local


class Nested:
    class Inner:
        inner_var = "inner"

        def inner_method(self):
            inner_method_local = "inner method"
```

=== Scope Analysis ===

Module: testpkg.class_scoping
Package: testpkg

Scope 0 (Module):
  MyClass (local)
  Nested (local)
  outer (local)
