pyparser/src/ast/scoping/snapshots/encore_pyparser__ast__scoping__tests__lambda.snap
---
source: pyparser/src/ast/scoping/tests.rs
expression: output
---
# Source: lambda.py

```python
# Lambda expressions and their scoping

# Simple lambda
add = lambda x, y: x + y

# Lambda with default argument
greet = lambda name="World": f"Hello, {name}"

# Lambda capturing from enclosing scope
multiplier = 10
scale = lambda x: x * multiplier

# Lambda in function
def make_adder(n):
    return lambda x: x + n


# Nested lambdas
compose = lambda f, g: lambda x: f(g(x))

# Lambda with *args and **kwargs
variadic = lambda *args, **kwargs: (args, kwargs)

# Lambda in list
operations = [
    lambda x: x + 1,
    lambda x: x * 2,
    lambda x: x ** 2,
]

# Lambda in dict
handlers = {
    "add": lambda a, b: a + b,
    "sub": lambda a, b: a - b,
    "mul": lambda a, b: a * b,
}

# Lambda with conditional
absolute = lambda x: x if x >= 0 else -x

# Higher-order with lambda
def apply_twice(f):
    return lambda x: f(f(x))


result = apply_twice(lambda x: x + 1)(5)  # 7
```

=== Scope Analysis ===

Module: testpkg.lambda
Package: testpkg

Scope 0 (Module):
  absolute (local)
  add (local)
  apply_twice (local)
  compose (local)
  greet (local)
  handlers (local)
  make_adder (local)
  multiplier (local)
  operations (local)
  result (local)
  scale (local)
  variadic (local)
