pyparser/src/ast/scoping/snapshots/encore_pyparser__ast__scoping__tests__nested_functions_with_nonlocal.snap
---
source: pyparser/src/ast/scoping/tests.rs
expression: output
---
=== Scope Analysis ===


Scope 0 (Module):
  outer (local)
