pyparser/src/ast/scoping/snapshots/encore_pyparser__ast__scoping__tests__relative_import_from_package.snap
---
source: pyparser/src/ast/scoping/tests.rs
expression: output
---
=== Scope Analysis ===

Module: myapp.services
Package: myapp.services

Scope 0 (Module):
  other (import) from myapp.parent
  sibling (import) from myapp.services
  thing (import) from myapp.services.sub
